2003-11-21  Werner Koch  <wk@gnupg.org>

	* t-common.h: New.  Shared functions from other tests. 
	* t-dnparser.c, t-cms-parser.c, t-crl-parser.c: Use it here.

2003-11-17  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (list_extensions): Fixed test on EOF.
	(list_extensions, one_file): Ditto.

2003-11-12  Werner Koch  <wk@gnupg.org>

	Adjusted everything for the new API. 

2003-10-31  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (print_time, one_file): Now uses ksba_isotime_t.
	* t-crl-parser.c (print_time, one_file): Ditto.

2002-11-25  Werner Koch  <wk@gnupg.org>

	* t-cms-parser.c (one_file): Print the content-type attribute.

2002-05-17  Werner Koch  <wk@gnupg.org>

	* t-cms-parser.c (one_file): Use ksba_cms_identify.

2002-05-04  Werner Koch  <wk@gnupg.org>

	* t-dnparser.c (test_1): Add test on empty elements.

2002-03-22  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (print_names): New.
	(list_extensions): Print the CRLdistPoints.

2002-03-13  Werner Koch  <wk@gnupg.org>

	* t-cms-parser.c (one_file): Distinguish between signed and
	enveloped CMS objects.

2002-03-12  Werner Koch  <wk@gnupg.org>

	* t-cms-parser.c (one_file): Detect certs-only messages.
	(print_sexp): Fixed printing of serial number

2002-02-19  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (list_extensions): Print certificatePolicies.

2002-02-07  Werner Koch  <wk@gnupg.org>

	* crl_testpki_testpca.der: New.
	* t-crl-parser.c (main): Changed the default test CRL.

2002-01-23  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (one_file): Print key usage restrictions

2002-01-22  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (list_extensions): New.

2002-01-11  Werner Koch  <wk@gnupg.org>

	* t-crl-parser.c: Add commented test to write a hash log

2002-01-10  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (print_sexp): Replaced with the one from the other
	tests.
	(one_file): Add code to check the public key conversions.

	* t-dnparser.c: New, but we need to define some test cases.
