@@ -1,3 +1,9 @@
+2003-11-28  Werner Koch  <wk@gnupg.org>
+
+	* t-common.h (print_sexp): Print alphanumeric tokens if possible.
+
+	* t-ocsp.c: New.
+
 2003-11-21  Werner Koch  <wk@gnupg.org>
 
 	* t-common.h: New.  Shared functions from other tests. 
